--- a/src/app/dashboard/dashboard/forum-action/forum-action.component.html
+++ b/src/app/dashboard/dashboard/forum-action/forum-action.component.html
@@ -63,7 +63,7 @@
               <label class="col-sm-2 control-label">广告有效开始</label>
               <div class="col-sm-4">
                 <input ui-jq="daterangepicker" ui-options="{
-                format: 'YYYY-MM-DD',
+                locale: {format: 'YYYY-MM-DD'},
                 startDate: '2018-01-01',
                 endDate: '2018-12-31'
               }" name="dateValidStart" id="dateValid" class="form-control w-md" />
