--- a/src/app/home/home/issue/issue.component.html
+++ b/src/app/home/home/issue/issue.component.html
@@ -42,12 +42,14 @@
               </div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
+            <div class="form-group">
             <label class="col-sm-2 control-label">请输入论坛信息</label>
             <div class="col-sm-10">
               <!-- [froalaEditor]  -->
               <!-- [(ngModel)]="forum.content" -->
               <!-- ui-jq="froalaEditor" -->
               <div  name="forumContent" id="forumContent"></div>
+            </div>
             </div>
             <div class="line line-dashed b-b line-lg pull-in"></div>
             <div class="form-group">
