--- a/src/app/home/home/live/class/class.component.html
+++ b/src/app/home/home/live/class/class.component.html
@@ -16,6 +16,33 @@
         <div class="col-lg-8">
           <div class="panel panel-default">
             <div class="panel-heading font-bold">
+              我加入的课程
+            </div>
+            <div class="panel-body">
+              <ul class="all-blogs">
+                <li class="media" *ngFor="let class of classlist">
+                  <div class="shape">
+                    <div class="shape-text">hot</div>
+                  </div>
+                  <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
+                    <img style="width:200px;height:150px" src="{{class.images[0]}}" alt="...">
+                  </a>
+                  <div class="media-body">
+                    <a routerLink="/home/home/live/classauth/{{class._id}}"><h4 class="media-heading">{{class.title}}</h4></a>
+                    <p class="author">{{class.subtitle}}</p>
+                    <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
+                    <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
+                    <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
+                  </div>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8">
+          <div class="panel panel-default">
+            <div class="panel-heading font-bold">
               精品课程
               <div class="col-lg-2" style="float:right">
                 <button class="btn btn-success btn-block btn-sm " (click)="issue()">+发布课程</button>
@@ -26,15 +53,11 @@
                 <div class="nav-tabs-alt">
                   <ul class="nav nav-tabs nav-justified">
                     <li class="active">
-                      <a data-target="#tab-1" role="tab" data-toggle="tab"><b>今天开课</b></a>
+                      <a data-target="#tab-1" role="tab" data-toggle="tab"><b>预计开班课程</b></a>
                     </li>
                     <li>
-                      <a data-target="#tab-2" role="tab" data-toggle="tab"><b>预计开课</b></a>
+                      <a data-target="#tab-2" role="tab" data-toggle="tab"><b>完成的课程</b></a>
                     </li>
-                    <li>
-                      <a data-target="#tab-3" role="tab" data-toggle="tab"><b>Year</b></a>
-                    </li>
-
                   </ul>
                 </div>
 
@@ -42,45 +65,22 @@
                   <div class="tab-pane active" id="tab-1">
                     <div class="wrapper-md">
                       <ul class="all-blogs">
-                        <li class="media">
+                        <li class="media" *ngFor="let class of classlist">
                           <div class="shape">
                             <div class="shape-text">hot</div>
                           </div>
-                          <a class="pull-left" href="#">
-                        <img src="http://placehold.it/200x100" alt="...">
-                      </a>
-                          <div class="media-body">
-                            <h4 class="media-heading">Latest Google Updates</h4>
-                            <p class="author">Mike Smith</p>
-                          </div>
-                        </li>
-                        <li class="media">
-                          <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/200x100" alt="...">
-                    </a>
-                          <div class="media-body">
-                            <h4 class="media-heading">Newest bootstrap version</h4>
-                            <p class="author">Dave Hesler</p>
-                          </div>
-                        </li>
-                        <li class="media">
-                          <a class="pull-left" href="#">
-                            <img class="media-object" src="http://placehold.it/200x100" alt="...">
+                          <a class="pull-left" routerLink="/home/home/live/classauth/{{class._id}}">
+                            <img style="width:200px;height:150px"  src="{{class.images[0]}}" alt="...">
                           </a>
                           <div class="media-body">
-                            <h4 class="media-heading">Android rolls our another update</h4>
-                            <p class="author">Michael Davis</p>
+                            <a routerLink="/home/home/live/classauth/{{class._id}}"><h4 class="media-heading">{{class.title}}</h4></a>
+                            <p class="author">{{class.subtitle}}</p>
+                            <p class="author" style="margin-right:20px">主讲：{{class.lecturename}}</p>
+                            <p class="author" style="margin-right:20px">开课时间：{{class.start}} -- {{class.end}}</p>
+                            <p class="author" style="margin-right:20px;color:red">RMB:{{class.price}}</p>
                           </div>
                         </li>
-                        <li class="media">
-                          <a class="pull-left" href="#">
-                            <img class="media-object" src="http://placehold.it/200x100" alt="...">
-                          </a>
-                          <div class="media-body">
-                            <h4 class="media-heading">Survey results are out</h4>
-                            <p class="author">Mike Smith</p>
-                          </div>
-                        </li>
+
                       </ul>
                     </div>
                   </div>
@@ -92,7 +92,7 @@
                             <div class="shape-text">hot</div>
                           </div>
                           <a class="pull-left" href="#">
-                        <img src="http://placehold.it/200x100" alt="...">
+                        <img style="width:200px" src="http://placehold.it/200x100" alt="...">
                     </a>
                           <div class="media-body">
                             <h4 class="media-heading">Latest Google Updates</h4>
@@ -143,59 +143,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="col w-md lter b-l" style="width:100%;height:100%">
-            <div class="vbox">
-              <div class="row-row">
-                <div class="cell">
-                  <div class="cell-inner">
-                    <div class="wrapper-md">
-                      This is the scrollable content
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      <p>&nbsp;</p>
-                      You got the bottom
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="padder b-t b-light text-center">
-                <div class="m-xs">Footer with fluid height</div>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
