--- a/src/app/home/home/product/product.component.html
+++ b/src/app/home/home/product/product.component.html
@@ -70,72 +70,53 @@
                 </div>
               </div>
             </div>
-
           </div>
           <div class="panel panel-default ">
             <div class="panel-heading font-bold">外观图片</div>
             <div class="panel-body">
-              <div class="col-lg-2 col-md-4 col-sm-3 col-xs-4 col-xxs-12" *ngFor="let imgurl of productInfo['appearimages'];let i = index">
-                <a (click)="showGallery('appear',i)">  
-                <img style="width:100%" alt="" src="http://localhost:3000{{imgurl}}">
-                  <div class="text"></div>
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="panel panel-default ">
-            <div class="panel-heading font-bold">细节图片</div>
-            <div class="panel-body">
-              <div class="col-lg-2 col-md-4 col-sm-3 col-xs-4 col-xxs-12" *ngFor="let imgurl of productInfo['detailimages'];let i = index">
-                <a (click)="showGallery('detail',i)">
-                  <img style="width:100%" alt="" src="http://localhost:3000{{imgurl}}">
-                  <div class="text"></div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="modal fade" id="imagegallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><i class="icon-close " style="font-size:40px;color:white"></i></button>
-                <h4 class="modal-title">{{modalTitle}}</h4>
-              </div>
-              <div class="modal-content">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                      <li data-target="#carousel-example-generic" data-slide-to="i" [ngClass]="{active: i==0}" *ngFor="let imageurl of gallerys;let i = index"></li>
-                    </ol>
-                    <!-- background-image: url(path/to/img/relative/to/css);
-  background-size: cover;
-  background-position: 50%; -->
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
-                      <div class="item" [ngClass]="{active: i==0}" *ngFor="let imageurl of gallerys;let i = index">
-                        <img style="align:center" src="http://localhost:3000{{imageurl}}" alt="...">
-                      </div>
+              <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                  <div class="lightBoxGallery">
+                    <a href="http://localhost:3000{{imgurl}}" title="1" data-gallery="" *ngFor="let imgurl of productInfo['appearimages'];let i = index"><img style="width:20%"  src="http://localhost:3000{{imgurl}}"></a>
+                    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
+                    <div id="blueimp-gallery" class="blueimp-gallery">
+                      <div class="slides"></div>
+                      <h3 class="title"></h3>
+                      <a class="prev">‹</a>
+                      <a class="next">›</a>
+                      <a class="close">×</a>
+                      <a class="play-pause"></a>
+                      <ol class="indicator"></ol>
                     </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">上一页</span>
-  </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">下一页</span>
-  </a>
                   </div>
                 </div>
               </div>
-              <!-- /.modal-content -->
             </div>
-            <!-- /.modal-dialog -->
           </div>
-
+          <div class="panel panel-default ">
+            <div class="panel-heading font-bold">细节图片</div>
+            <div class="panel-body">
+              <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                  <div class="lightBoxGallery">
+                    <a href="http://localhost:3000{{imgurl}}" title="1" data-gallery="" *ngFor="let imgurl of productInfo['detailimages'];let i = index"><img style="width:20%" src="http://localhost:3000{{imgurl}}"></a>
+                    <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
+                    <div id="blueimp-gallery" class="blueimp-gallery">
+                      <div class="slides"></div>
+                      <h3 class="title"></h3>
+                      <a class="prev">‹</a>
+                      <a class="next">›</a>
+                      <a class="close">×</a>
+                      <a class="play-pause"></a>
+                      <ol class="indicator"></ol>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+
         <!-- 相关论坛 -->
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
           <div class="panel panel-default ">
@@ -174,6 +155,8 @@
           </div>
         </div>
         <!-- 相关口碑 -->
+
       </div>
     </div>
   </div>
+</div>
