--- a/src/app/home/home/live/class/class.component.html
+++ b/src/app/home/home/live/class/class.component.html
@@ -53,10 +53,10 @@
                 <div class="nav-tabs-alt">
                   <ul class="nav nav-tabs nav-justified">
                     <li class="active">
-                      <a data-target="#tab-1" role="tab" data-toggle="tab"><b>预计开班课程</b></a>
+                      <a data-target="#tab-1" role="tab" data-toggle="tab" class="h4">预计开班课程</a>
                     </li>
                     <li>
-                      <a data-target="#tab-2" role="tab" data-toggle="tab"><b>完成的课程</b></a>
+                      <a data-target="#tab-2" role="tab" data-toggle="tab" class="h4">完成的课程</a>
                     </li>
                   </ul>
                 </div>
