--- a/src/app/home/home/forums/forums.component.html
+++ b/src/app/home/home/forums/forums.component.html
@@ -36,7 +36,12 @@
                           <div class="article flex-1">
                             <h2 class="figcaption"><a routerLink="../../content/{{forumObj._id}}" title="{{forumObj.title}}"> {{forumObj.title}}</a></h2>
                             <br>
-                            <div class="subtitle"><span>{{forumObj.avator}}</span><span>{{forumObj.fromTime}}</span><span>   {{forumObj.comment}}评论</span><span>    {{forumObj.read}}查看</span></div>
+                            <div class="subtitle"><span>{{forumObj.avator}}</span>
+                              <span>   {{forumObj.fromTime}}</span>
+                              <span>   {{forumObj.comment}}评论</span>
+                              <span>   {{forumObj.read}}查看</span> 
+                              <button *ngIf="forumObj.topup" class="btn btn-danger btn-xs">置顶</button>
+                            </div>
                           </div>
                             <a routerLink="../../content/{{forumObj._id}}" *ngIf="forumObj.images.length>0" title=" {{forumObj.title}}" class="img" [ngStyle]="{'background-image': 'url(' + forumObj.images[0] + ')'}"></a>
                           </div>
