--- a/src/app/home/home/praise/praise.component.html
+++ b/src/app/home/home/praise/praise.component.html
@@ -27,27 +27,24 @@
               <div class="form-group">
                 <label class="col-sm-2 control-label">购买该产品地址</label>
                 <div class="col-sm-3">
-                  <select name="province" class="form-control m-b" [(ngModel)]="praise.province" (change)="provinceListener()">
-                <option></option>
-                <option *ngFor="let pro of provinces">{{pro}}</option>
-                </select>
+                  <select name="province" id="province" class="form-control m-b" [(ngModel)]="praise.province" (change)="provinceListener()">
+                    <option *ngFor="let pro of provinces">{{pro}}</option>
+                  </select>
                 </div>
                 <div class="col-sm-3">
-                  <select name="city" class="form-control m-b" [(ngModel)]="praise.city" (change)="cityListener()">
-                <option></option>
-                <option *ngFor="let cityName of citys">{{cityName}}</option>
-                </select>
+                  <select name="city" id="city" class="form-control m-b" [(ngModel)]="praise.city" (change)="cityListener()">
+                  <option *ngFor="let cityName of citys">{{cityName}}</option>
+                  </select>
                 </div>
                 <div class="col-sm-3">
-                  <select name="district" class="form-control m-b" [(ngModel)]="praise.district">
-                <option></option>
-                <option *ngFor="let district of districts">{{district}}</option>
-                </select>
+                  <select name="district" id="district" class="form-control m-b" [(ngModel)]="praise.district">
+                  <option *ngFor="let district of districts">{{district}}</option>
+                  </select>
                 </div>
               </div>
               <div class="line line-dashed b-b line-lg pull-in"></div>
               <div class="form-group">
-                <label class="col-sm-2 control-label">代理商</label>
+                <label class="col-sm-2 control-label">代理商名称</label>
                 <div class="col-sm-10">
                   <input type="text" name="delegate" [(ngModel)]="praise.delegate" id="praisedelegate" class="form-control">
                 </div>
